Fix page spacing and fonts

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 * {
     padding: 0;
@@ -14,7 +14,7 @@ html {
 body {
     color: #b3b3b3;
     background-color: #121212;
-    font-family: Arial;
+    font-family: "Open Sans", Arial, Helvetica, sans-serif;
     line-height: 1.5rem;
 }
 
@@ -50,9 +50,9 @@ a {
 }
 
 .navbar {
-    width: 80%; 
+    width: 85%; 
     margin: 0 auto;
-    padding: 1.5rem;
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -75,17 +75,17 @@ a {
 }
 
 .province {
-    width: 80%; 
+    width: 85%; 
     margin: 0 auto;
 }
 
 h1.city {
-    margin: 3rem 1.5rem;
+    margin: 2rem 1rem;
     font-style: italic;
 }
 
 .city {
-    margin: 1.5rem;
+    margin: 1rem;
 }
 
 /* Raid */
